Verify challenge resource matches request domain (#31045)
* Updated KeyVaultCredentialPolicy to verify the challenge resource matches the request domain.

* Updated JavaDoc.

* Updated CHANGELOGs, READMEs and POMs.

* Fixed CheckStyle issue.

* Removed typo from CHANGELOG.

* Added test for when `verifyChallengeResource` is set to `false`.

* Added error message.

* Changed `verifyChallengeResource()` (defaulted to `true`) to `disableChallengeResourceVerification()` (defaults to `false`) in client builders. Functionality remains unchanged.

* Fixed JavaDoc error.

* Changed `disableChallengeResourceVerification()` to take no args instead of a `boolean`.

* Updated CHANGELOGs.

* Updated CHANGELOG dates.

* Removed JavaDoc references to KeyVaultCredentialPolicy.